--- a/static/css/style.css
+++ b/static/css/style.css
@@ -34,7 +34,7 @@ body {
 #user-input {
     width: calc(100% - 70px);
     padding: 8px;
-    ovrflow: auto;
+    overflow: auto;
     margin-right: 10px;
     background-color: #0f5733;
     box-shadow: inset 0 0 10px rgba(0, 0, 0, 1);
