--- a/templates/index.html
+++ b/templates/index.html
@@ -138,7 +138,7 @@
 
   <form id="promptTextAreaForm" style="position: absolute; bottom: 20px; left: 0; width: 100%; text-align: center;">
     <!-- <textarea id="userInput" name="userInput" placeholder="Enter your question..." style="width: calc(100% - 100px); resize: vertical;" oninput="resizeTextarea()"></textarea> -->
-    <textarea id="promptTextArea" tabind ex="0" data-id="root" rows="1" placeholder="Message ChatGPT…" class="m-0 w-full resize-none border-0 bg-transparent py-[10px] pr-10 focus:ring-0 focus-visible:ring-0 dark:bg-transparent md:py-3.5 md:pr-12 placeholder-black/50 dark:placeholder-white/50 pl-3 md:pl-4" style="max-height: 200px; height: 140px; overflow-y: auto;; font-size: 20px;"></textarea>
+    <textarea id="promptTextArea" onkeydown="checkEnter(event)" ex="0" data-id="root" rows="1" placeholder="Message ChatGPT…" class="m-0 w-full resize-none border-0 bg-transparent py-[10px] pr-10 focus:ring-0 focus-visible:ring-0 dark:bg-transparent md:py-3.5 md:pr-12 placeholder-black/50 dark:placeholder-white/50 pl-3 md:pl-4" style="max-height: 200px; height: 140px; overflow-y: auto;; font-size: 20px;"></textarea>
     <button type="button" onclick="processInput()" style="width: 30px; margin-right: 20px;" >></button>
   </form>
 
@@ -148,6 +148,16 @@
   </div>
 
   <script>
+    checkEnter();
+    
+    function checkEnter() {
+      if(event.key === "Enter" && !event.shiftKey) {
+        event.preventDefault();
+        processInput();
+        document.getElementById("promptTextArea").value = "";
+      }
+    }
+    
     function processInput() {
       // Get user input from the form
       var promptTextArea = document.getElementById('promptTextArea').value;
