--- a/templates/index.html
+++ b/templates/index.html
@@ -5,19 +5,25 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Scribe | AI for Education</title>
-  <style>
-    #body {
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Comic+Neue:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Nova+Round&display=swap" rel="stylesheet">
+<style>
+    body {
       margin: 20px;
       padding: 0;
+      background-color: #333333;
+    }
+    
+    h1 {
+      font-family: 'Nova Round', sans-serif;
+      color: #00fcbd;
+      text-align: center;
+      text-shadow: 0 0 10px #006048;
     }
 
     #promptTextArea {
-      /* height: 40px;
-      resize: none;
-      margin: 20px;
-      width: 100%;
-      box-sizing: border-box; */
-      text-size-adjust: 100%;
+    text-size-adjust: 100%;
     tab-size: 4;
     --rem: 16;
     --white: #fff;
@@ -100,8 +106,8 @@
     --tw-backdrop-saturate: ;
     --tw-backdrop-sepia: ;
     color: inherit;
-    font-family: inherit;
-    font-weight: inherit;
+    font-family: 'Comic Neue', sans-serif;
+    font-weight: ;
     --tw-shadow: 0 0 transparent;
     appearance: none;
     border-color: #8e8ea0;
@@ -120,15 +126,24 @@
     max-height: 200px;
     height: 100px;
     overflow-y: hidden;
-    border: 2px solid black;
+    background-color: #242424;
+    box-shadow: inset 0 0 10px #000;
+    color: #00fcbd;
+    }
+
+    #promptTextArea::placeholder {
+      color: #006048;
     }
     
     #outputContainer {
       padding: 10px;
-      height: 600px;
+      height: 50vh;
       overflow: auto;
-      border: 2px solid black;
       border-radius: 20px;
+      box-shadow: inset 0 0 10px #000;
+      background-color: #242424;
+      font-family: 'Comic Neue', sans-serif;
+      color: #dedede;
     }
   </style>
 </head>
