--- a/templates/index.html
+++ b/templates/index.html
@@ -21,6 +21,8 @@
             color: #00fcbd;
             text-align: right;
             text-shadow: 0 0 10px #006048;
+            transform: translateX(-50%);
+            left: 50vw;
         }
 
         .button-container {
