--- a/templates/teacherlogin.html
+++ b/templates/teacherlogin.html
@@ -73,8 +73,8 @@
             <label for="password">Password:</label>
             <input type="password" id="password" name="password" required>
 
-            <button onclick="redirectToTeacherHome()" type="submit">Login</button>
-            <button onclick="redirectToHome()" type="submit">Back</button>
+            <button onclick="redirectToTeacherHome()">Login</button>
+            <button onclick="redirectToHome()">Back</button>
 
             <script>
                 function redirectToTeacherHome() {
