fixed home redirect issue

--- a/templates/studentlogin.html
+++ b/templates/studentlogin.html
@@ -94,7 +94,7 @@
                     window.location.href = 'chat';
                 }
                 function redirectToHome() {
-                    window.location.href = 'home';
+                    window.location.href = '/';
                 }
             </script>
         </form>
