--- a/templates/teacherlogin.html
+++ b/templates/teacherlogin.html
@@ -81,7 +81,7 @@
                     window.location.href = 'dashboard';
                 }
                 function redirectToHome() {
-                    window.location.href = 'home';
+                    window.location.href = '/';
                 }
             </script>
         </form>
