--- a/templates/studentlogin.html
+++ b/templates/studentlogin.html
@@ -93,7 +93,7 @@
 </head>
 <body>
     <div class="login-container">
-        <h2>Student Login</h2>
+        <h2>Scribe Login</h2>
 
         {% with messages = get_flashed_messages(with_categories=true) %}
             {% if messages %}
@@ -114,7 +114,7 @@
 
             <button type="submit">Login</button>
             <button type="button" onclick="window.location.href = '/signup-student';">Sign Up</button>
-            <button type="button" onclick="window.location.href = '/';">Back</button>
+            <!-- <button type="button" onclick="window.location.href = '/';">Back</button> -->
         </form>
     </div>
 </body>
